@@ -7,6 +7,7 @@
 #include <stdlib.h>
 #include <string.h>
 #include <stdio.h>
+#include <stdarg.h>
 #include <errno.h>
 #include <time.h>
 #include <assert.h>
@@ -19,8 +20,86 @@
 
 #include "../core.h"
 
+static GSM_Error SMSDPgSQL_Connect(GSM_SMSDConfig * Config);
+static GSM_Error SMSDPgSQL_Free(GSM_SMSDConfig *Config);
+#ifdef __GNUC__
+static GSM_Error SMSDPgSQL_Query(GSM_SMSDConfig * Config, PGresult **Res, const char *fmt, ...) __attribute__((format(printf,3,4)));
+#else
+static GSM_Error SMSDPgSQL_Query(GSM_SMSDConfig * Config, PGresult **Res, const char *fmt, ...);
+#endif
+
+struct _TableCheck
+{
+	const char *query;
+	const char *msg;
+} TableCheck;
+
+static struct _TableCheck	tc[] = 
+{
+	{ "SELECT id FROM outbox", "No table for outbox sms" },
+	{ "SELECT id FROM outbox_multipart", "No table for outbox sms" },
+	{ "SELECT id FROM sentitems", "No table for sent sms" },
+	{ "SELECT id FROM inbox", "No table for inbox sms" },
+/*	{ "SELECT Version FROM gammu", "No Gammu table" }, */
+	{ NULL, NULL },
+};
+
 /* Connects to database */
 static GSM_Error SMSDPgSQL_Init(GSM_SMSDConfig * Config)
+{
+	unsigned char buf[400];
+	PGresult *Res;
+	int s;
+	struct _TableCheck *T;
+
+	Config->DBConnPgSQL = NULL;
+
+	if ((s = SMSDPgSQL_Connect(Config)) != ERR_NONE)
+		return s;
+
+	for (T = tc; T->query; T++) {
+		sprintf(buf, "%s WHERE TRUE", T->query);
+		Res = PQexec(Config->DBConnPgSQL, buf);
+		if ((!Res) || (PQresultStatus(Res) != PGRES_TUPLES_OK)) {
+			SMSD_Log(-1, Config, "%s: %s", T->msg, PQresultErrorMessage(Res));
+			PQclear(Res);
+			SMSDPgSQL_Free(Config);
+			return ERR_UNKNOWN;
+		}
+
+		PQclear(Res);
+	}
+
+	sprintf(buf, "SELECT Version FROM gammu WHERE TRUE");
+	Res = PQexec(Config->DBConnPgSQL, buf);
+	if ((!Res) || (PQresultStatus(Res) != PGRES_TUPLES_OK)) {
+		SMSD_Log(-1, Config, "No Gammu table: %s",
+			     PQresultErrorMessage(Res));
+		PQclear(Res);
+		SMSDPgSQL_Free(Config);
+		return ERR_UNKNOWN;
+	}
+	if (PQntuples(Res) == 0) {
+		SMSD_Log(-1, Config, "No version info in Gammu table: %s",
+			     PQresultErrorMessage(Res));
+		PQclear(Res);
+		SMSDPgSQL_Free(Config);
+		return ERR_UNKNOWN;
+	}
+	if (SMSD_CheckDBVersion(Config, atoi(PQgetvalue(Res, 0, 0))) != ERR_NONE) {
+		PQclear(Res);
+		PQfinish(Config->DBConnPgSQL);
+		return ERR_UNKNOWN;
+	}
+	PQclear(Res);
+
+	SMSD_Log(0, Config, "Table check succeeded");
+
+	return ERR_NONE;
+}
+
+/* [Re]connects to database */
+static GSM_Error SMSDPgSQL_Connect(GSM_SMSDConfig * Config)
 {
 	unsigned char buf[400];
 	PGresult *Res;
@@ -39,6 +118,7 @@ static GSM_Error SMSDPgSQL_Init(GSM_SMSDConfig * Config)
 		Config->PC, Config->user, Config->password, Config->database,
 		port);
 
+	SMSDPgSQL_Free(Config);
 	Config->DBConnPgSQL = PQconnectdb(buf);
 	if (PQstatus(Config->DBConnPgSQL) != CONNECTION_OK) {
 		SMSD_Log(-1, Config, "Error connecting to database: %s",
@@ -47,77 +127,11 @@ static GSM_Error SMSDPgSQL_Init(GSM_SMSDConfig * Config)
 		return ERR_UNKNOWN;
 	}
 
-	sprintf(buf, "SELECT id FROM outbox WHERE TRUE");
-	Res = PQexec(Config->DBConnPgSQL, buf);
-	if ((!Res) || (PQresultStatus(Res) != PGRES_TUPLES_OK)) {
-		SMSD_Log(-1, Config, "No table for outbox sms: %s",
-			     PQresultErrorMessage(Res));
-		PQclear(Res);
-		PQfinish(Config->DBConnPgSQL);
-		return ERR_UNKNOWN;
-	}
-	PQclear(Res);
-
-	sprintf(buf, "SELECT id FROM outbox_multipart WHERE TRUE");
-	Res = PQexec(Config->DBConnPgSQL, buf);
-	if ((!Res) || (PQresultStatus(Res) != PGRES_TUPLES_OK)) {
-		SMSD_Log(-1, Config, "No table for outbox sms: %s",
-			     PQresultErrorMessage(Res));
-		PQclear(Res);
-		PQfinish(Config->DBConnPgSQL);
-		return ERR_UNKNOWN;
-	}
-	PQclear(Res);
-
-	sprintf(buf, "SELECT id FROM sentitems WHERE TRUE");
-	Res = PQexec(Config->DBConnPgSQL, buf);
-	if ((!Res) || (PQresultStatus(Res) != PGRES_TUPLES_OK)) {
-		SMSD_Log(-1, Config, "No table for sent sms: %s",
-			     PQresultErrorMessage(Res));
-		PQclear(Res);
-		PQfinish(Config->DBConnPgSQL);
-		return ERR_UNKNOWN;
-	}
-	PQclear(Res);
-
-	sprintf(buf, "SELECT id FROM inbox WHERE TRUE");
-	Res = PQexec(Config->DBConnPgSQL, buf);
-	if ((!Res) || (PQresultStatus(Res) != PGRES_TUPLES_OK)) {
-		SMSD_Log(-1, Config, "No table for inbox sms: %s",
-			     PQresultErrorMessage(Res));
-		PQclear(Res);
-		PQfinish(Config->DBConnPgSQL);
-		return ERR_UNKNOWN;
-	}
-	PQclear(Res);
-
-	sprintf(buf, "SELECT Version FROM gammu WHERE TRUE");
-	Res = PQexec(Config->DBConnPgSQL, buf);
-	if ((!Res) || (PQresultStatus(Res) != PGRES_TUPLES_OK)) {
-		SMSD_Log(-1, Config, "No Gammu table: %s",
-			     PQresultErrorMessage(Res));
-		PQclear(Res);
-		PQfinish(Config->DBConnPgSQL);
-		return ERR_UNKNOWN;
-	}
-	if (PQntuples(Res) == 0) {
-		SMSD_Log(-1, Config, "No version info in Gammu table: %s",
-			     PQresultErrorMessage(Res));
-		PQclear(Res);
-		PQfinish(Config->DBConnPgSQL);
-		return ERR_UNKNOWN;
-	}
-	if (SMSD_CheckDBVersion(Config, atoi(PQgetvalue(Res, 0, 0))) != ERR_NONE) {
-		PQclear(Res);
-		PQfinish(Config->DBConnPgSQL);
-		return ERR_UNKNOWN;
-	}
-	PQclear(Res);
-
 	Res = PQexec(Config->DBConnPgSQL, "SET NAMES UTF8");
 	PQclear(Res);
-
-	SMSD_Log(0, Config, "Connected to Database: %s on %s", Config->database, Config->PC);
+	SMSD_Log(0, Config, "Connected to database: %s on %s. Server version: %d Protocol: %d", 
+			PQdb(Config->DBConnPgSQL), PQhost(Config->DBConnPgSQL), 
+			PQserverVersion(Config->DBConnPgSQL), PQprotocolVersion(Config->DBConnPgSQL));
 
 	return ERR_NONE;
 }
@@ -143,32 +157,83 @@ static void SMSDPgSQL_LogError(GSM_SMSDConfig *Config, PGresult *Res)
 	}
 }
 
-static GSM_Error SMSDPgSQL_Query(GSM_SMSDConfig * Config, const char *query, PGresult **Res)
+static GSM_Error SMSDPgSQL_Query(GSM_SMSDConfig * Config, PGresult **Res, const char *fmt, ...)
 {
+	char query[8192];
+	va_list args;
+	ExecStatusType Status = PGRES_COMMAND_OK;
+
+	va_start(args, fmt);
+	vsprintf(query, fmt, args);
+	va_end(args);
+
 	SMSD_Log(2, Config, "Execute SQL: %s", query);
 
 	*Res = PQexec(Config->DBConnPgSQL, query);
-	if ((*Res == NULL) || (PQresultStatus(*Res) != PGRES_COMMAND_OK && PQresultStatus(*Res) != PGRES_TUPLES_OK)) {
+	if ((*Res == NULL) || ((Status = PQresultStatus(*Res)) != PGRES_COMMAND_OK && (Status != PGRES_TUPLES_OK))) {
 		SMSD_Log(0, Config, "SQL failed: %s", query);
 		SMSDPgSQL_LogError(Config, *Res);
+
+		/* Check for reconnect */
+		if ((*Res == NULL) || (Status == PGRES_FATAL_ERROR)) {
+			/* Dirty hack */
+			*Res = PQexec(Config->DBConnPgSQL, "SELECT 42");
+			if (*Res != NULL)
+				PQclear(*Res);
+			SMSD_Log(0, Config, "Query failed, checking connection");
+			if (PQstatus(Config->DBConnPgSQL) != CONNECTION_OK) {
+				SMSD_Log(0, Config, "SQL connection failed. Reconnecting");
+
+				if (SMSDPgSQL_Connect(Config) != ERR_NONE)
+					return ERR_UNKNOWN;
+
+				/* Connected. Let's re-issue query */
+				*Res = PQexec(Config->DBConnPgSQL, query);
+				if ((*Res == NULL) || ((Status = PQresultStatus(*Res)) != PGRES_COMMAND_OK && (Status != PGRES_TUPLES_OK))) {
+					SMSD_Log(0, Config, "SQL failed: %s", query);
+					SMSDPgSQL_LogError(Config, *Res);
+					if (*Res != NULL) {
+						PQclear(*Res);
+						*Res = NULL;
+					}
+
+					return ERR_UNKNOWN;
+				}
+
+				return ERR_NONE;
+			}
+
+		}
+
 		if (*Res != NULL) {
 			PQclear(*Res);
 			*Res = NULL;
 		}
+
+
 		return ERR_UNKNOWN;
 	}
 	return ERR_NONE;
 }
 
+/* Assume 2 * strlen(from) + 1 buffer in to */
+static size_t SMSDPgSQL_Escape(GSM_SMSDConfig * Config, char *to, char *from)
+{
+	/* Not much sense since we have only 1 DB connection */
+#ifdef HAVE_PQESCAPESTRINGCONN
+	return PQescapeStringConn(Config->DBConnPgSQL, to, from, strlen(from), NULL);
+#else
+	return PQescapeString(to, from, strlen(from));
+#endif
+}
+
 static GSM_Error SMSDPgSQL_InitAfterConnect(GSM_SMSDConfig * Config)
 {
-	unsigned char buf[400], buf2[200];
+	unsigned char buf2[200];
 
 	PGresult *Res;
 
-	sprintf(buf, "DELETE FROM phones WHERE IMEI = '%s'", Config->Status->IMEI);
-
-	if (SMSDPgSQL_Query(Config, buf, &Res) != ERR_NONE) {
+	if (SMSDPgSQL_Query(Config, &Res, "DELETE FROM phones WHERE IMEI = '%s'", Config->Status->IMEI) != ERR_NONE) {
 		SMSD_Log(0, Config, "Error deleting from database (%s)", __FUNCTION__);
 		return ERR_UNKNOWN;
 	}
@@ -184,13 +249,12 @@ static GSM_Error SMSDPgSQL_InitAfterConnect(GSM_SMSDConfig * Config)
 		strcat(buf2 + strlen(buf2), GetCompiler());
 	}
 
-	sprintf(buf,
-		"INSERT INTO phones (IMEI, ID, Send, Receive, InsertIntoDB, TimeOut, Client, Battery, Signal) VALUES ('%s', '%s', 'yes', 'yes', now(), now() + interval '10 seconds', '%s', -1, -1)",
-		Config->Status->IMEI, Config->PhoneID, buf2);
-
-	if (SMSDPgSQL_Query(Config, buf, &Res) != ERR_NONE) {
-		SMSD_Log(0, Config, "Error inserting into database (%s)", __FUNCTION__);
-		return ERR_UNKNOWN;
+	if (SMSDPgSQL_Query(Config, &Res, 
+		"INSERT INTO phones (IMEI, ID, Send, Receive, InsertIntoDB, TimeOut, Client, Battery, Signal) "
+		"VALUES ('%s', '%s', 'yes', 'yes', now(), now() + interval '10 seconds', '%s', -1, -1)",
+		Config->Status->IMEI, Config->PhoneID, buf2) != ERR_NONE) {
+			SMSD_Log(0, Config, "Error inserting into database (%s)", __FUNCTION__);
+			return ERR_UNKNOWN;
 	}
 	PQclear(Res);
 
@@ -220,15 +284,14 @@ static GSM_Error SMSDPgSQL_SaveInboxSMS(GSM_MultiSMSMessage *sms,
 			strcpy(buffer2, DecodeUnicodeString(sms->SMS[i].Number));
 			SMSD_Log(0, Config, "Delivery report: %s to %s", DecodeUnicodeString(sms->SMS[i].  Text), buffer2);
 
-			sprintf(buffer,
+			if (SMSDPgSQL_Query(Config, &Res,
 				"SELECT ID, Status, EXTRACT(EPOCH FROM SendingDateTime), DeliveryDateTime, SMSCNumber "
                                         "FROM sentitems WHERE "
 					"DeliveryDateTime IS NULL AND "
 					"SenderID = '%s' AND TPMR = '%i' AND DestinationNumber = '%s'",
-				Config->PhoneID, sms->SMS[i].MessageReference, buffer2);
-			if (SMSDPgSQL_Query(Config, buffer, &Res) != ERR_NONE) {
-				SMSD_Log(0, Config, "Error reading from database (%s)", __FUNCTION__);
-				return ERR_UNKNOWN;
+				Config->PhoneID, sms->SMS[i].MessageReference, buffer2) != ERR_NONE) {
+					SMSD_Log(0, Config, "Error reading from database (%s)", __FUNCTION__);
+					return ERR_UNKNOWN;
 			}
 
 			found = FALSE;
@@ -297,7 +360,7 @@ static GSM_Error SMSDPgSQL_SaveInboxSMS(GSM_MultiSMSMessage *sms,
 					" WHERE ID = '%s' AND TPMR = %i",
 					PQgetvalue(Res, j, 0),
 					sms->SMS[i].MessageReference);
-				if (SMSDPgSQL_Query(Config, buffer, &Res) != ERR_NONE) {
+				if (SMSDPgSQL_Query(Config, &Res, "%s", buffer) != ERR_NONE) {
 					SMSD_Log(0, Config, "Error writing to database (%s)", __FUNCTION__);
 					return ERR_UNKNOWN;
 				}
@@ -382,13 +445,7 @@ static GSM_Error SMSDPgSQL_SaveInboxSMS(GSM_MultiSMSMessage *sms,
 
 			case SMS_Coding_Default_No_Compression:
 				EncodeUTF8(buffer2, sms->SMS[i].Text);
-#ifdef HAVE_PQESCAPESTRINGCONN
-				PQescapeStringConn(Config->DBConnPgSQL, buffer4,
-						   buffer2, strlen(buffer2),
-						   NULL);
-#else
-				PQescapeString(buffer4, buffer2, strlen(buffer2));
-#endif
+				SMSDPgSQL_Escape(Config, buffer4, buffer2);
 				memcpy(buffer + strlen(buffer), buffer4,
 				       strlen(buffer4) + 1);
 				break;
@@ -401,7 +458,7 @@ static GSM_Error SMSDPgSQL_SaveInboxSMS(GSM_MultiSMSMessage *sms,
 		}
 
 		sprintf(buffer + strlen(buffer), "','%s')", Config->PhoneID);
-		if (SMSDPgSQL_Query(Config, buffer, &Res) != ERR_NONE) {
+		if (SMSDPgSQL_Query(Config, &Res, "%s", buffer) != ERR_NONE) {
 			SMSD_Log(0, Config, "Error writing to database (%s)", __FUNCTION__);
 			return ERR_UNKNOWN;
 		}
@@ -416,15 +473,14 @@ static GSM_Error SMSDPgSQL_SaveInboxSMS(GSM_MultiSMSMessage *sms,
 			}
 		}
 
-		if (SMSDPgSQL_Query(Config, "SELECT currval('inbox_id_seq')", &Res) != ERR_NONE) {
+		if (SMSDPgSQL_Query(Config, &Res, "%s", "SELECT currval('inbox_id_seq')") != ERR_NONE) {
 			SMSD_Log(0, Config, "Error getting current ID (%s)", __FUNCTION__);
 			return ERR_UNKNOWN;
 		}
 		locations_pos += sprintf((*Locations) + locations_pos, "%s ", PQgetvalue(Res, 0, 0));
 		PQclear(Res);
 
-		sprintf(buffer, "UPDATE phones SET Received = Received + 1 WHERE IMEI = '%s'", Config->Status->IMEI);
-		if (SMSDPgSQL_Query(Config, buffer, &Res) != ERR_NONE) {
+		if (SMSDPgSQL_Query(Config, &Res, "UPDATE phones SET Received = Received + 1 WHERE IMEI = '%s'", Config->Status->IMEI) != ERR_NONE) {
 			SMSD_Log(0, Config, "Error updating number of received messages (%s)", __FUNCTION__);
 			return ERR_UNKNOWN;
 		}
@@ -438,15 +494,12 @@ static GSM_Error SMSDPgSQL_SaveInboxSMS(GSM_MultiSMSMessage *sms,
 static GSM_Error SMSDPgSQL_RefreshSendStatus(GSM_SMSDConfig * Config,
 					     char *ID)
 {
-	unsigned char buffer[10000];
 	PGresult *Res;
 
-	sprintf(buffer, "UPDATE outbox SET SendingTimeOut = now() + INTERVAL '15 seconds' "
-                        "WHERE ID = '%s' AND SendingTimeOut < now()",
-		ID);
-	if (SMSDPgSQL_Query(Config, buffer, &Res) != ERR_NONE) {
-		SMSD_Log(0, Config, "Error writing to database (%s)", __FUNCTION__);
-		return ERR_UNKNOWN;
+	if (SMSDPgSQL_Query(Config, &Res, "UPDATE outbox SET SendingTimeOut = now() + INTERVAL '15 seconds' "
+		"WHERE ID = '%s' AND SendingTimeOut < now()", ID) != ERR_NONE) {
+			SMSD_Log(0, Config, "Error writing to database (%s)", __FUNCTION__);
+			return ERR_UNKNOWN;
 	}
 
 	if (atoi(PQcmdTuples(Res)) == 0) {
@@ -471,13 +524,10 @@ static GSM_Error SMSDPgSQL_FindOutboxSMS(GSM_MultiSMSMessage * sms,
 	int numb_rows;
 	gboolean found = FALSE;
 
-	sprintf(buf,
-		"SELECT ID, InsertIntoDB, SendingDateTime, SenderID FROM outbox "
-                      "WHERE SendingDateTime < now() AND SendingTimeOut < now()");
-
-	if (SMSDPgSQL_Query(Config, buf, &Res) != ERR_NONE) {
-		SMSD_Log(0, Config, "Error reading from database (%s)", __FUNCTION__);
-		return ERR_UNKNOWN;
+	if (SMSDPgSQL_Query(Config, &Res, "SELECT ID, InsertIntoDB, SendingDateTime, SenderID FROM outbox "
+		"WHERE SendingDateTime < now() AND SendingTimeOut < now()") != ERR_NONE) {
+			SMSD_Log(0, Config, "Error reading from database (%s)", __FUNCTION__);
+			return ERR_UNKNOWN;
 	}
 
 	numb_rows = PQntuples(Res);
@@ -521,7 +571,7 @@ static GSM_Error SMSDPgSQL_FindOutboxSMS(GSM_MultiSMSMessage * sms,
 				"FROM outbox_multipart WHERE ID='%s' AND SequencePosition='%i'",
 				ID, i);
 		}
-		if (SMSDPgSQL_Query(Config, buf, &Res) != ERR_NONE) {
+		if (SMSDPgSQL_Query(Config, &Res, "%s", buf) != ERR_NONE) {
 			SMSD_Log(0, Config, "Error reading from database (%s)", __FUNCTION__);
 			return ERR_UNKNOWN;
 		}
@@ -625,18 +675,15 @@ static GSM_Error SMSDPgSQL_MoveSMS(GSM_MultiSMSMessage * sms UNUSED,
 				   GSM_SMSDConfig * Config, char *ID,
 				   gboolean alwaysDelete UNUSED, gboolean sent UNUSED)
 {
-	unsigned char buffer[10000];
 	PGresult *Res;
 
-	sprintf(buffer, "DELETE FROM outbox WHERE ID = '%s'", ID);
-	if (SMSDPgSQL_Query(Config, buffer, &Res) != ERR_NONE) {
+	if (SMSDPgSQL_Query(Config, &Res, "DELETE FROM outbox WHERE ID = '%s'", ID) != ERR_NONE) {
 		SMSD_Log(0, Config, "Error deleting from database (%s)", __FUNCTION__);
 		return ERR_UNKNOWN;
 	}
 	PQclear(Res);
 
-	sprintf(buffer, "DELETE FROM outbox_multipart WHERE ID = '%s'", ID);
-	if (SMSDPgSQL_Query(Config, buffer, &Res) != ERR_NONE) {
+	if (SMSDPgSQL_Query(Config, &Res, "DELETE FROM outbox_multipart WHERE ID = '%s'", ID) != ERR_NONE) {
 		SMSD_Log(0, Config, "Error deleting from database (%s)", __FUNCTION__);
 		return ERR_UNKNOWN;
 	}
@@ -774,13 +821,7 @@ static GSM_Error SMSDPgSQL_CreateOutboxSMS(GSM_MultiSMSMessage * sms,
 
 			case SMS_Coding_Default_No_Compression:
 				EncodeUTF8(buffer2, sms->SMS[i].Text);
-#ifdef HAVE_PQESCAPESTRINGCONN
-				PQescapeStringConn(Config->DBConnPgSQL, buffer5,
-						   buffer2, strlen(buffer2),
-						   NULL);
-#else
-				PQescapeString(buffer5, buffer2, strlen(buffer2));
-#endif
+				SMSDPgSQL_Escape(Config, buffer5, buffer2);
 				memcpy(buffer + strlen(buffer), buffer5,
 				       strlen(buffer5) + 1);
 				break;
@@ -796,14 +837,14 @@ static GSM_Error SMSDPgSQL_CreateOutboxSMS(GSM_MultiSMSMessage * sms,
 		}
 		strcat(buffer, ")");
 
-		if (SMSDPgSQL_Query(Config, buffer, &Res) != ERR_NONE) {
+		if (SMSDPgSQL_Query(Config, &Res, "%s", buffer) != ERR_NONE) {
 			SMSD_Log(0, Config, "Error writing to database (%s)", __FUNCTION__);
 			return ERR_UNKNOWN;
 		}
 		PQclear(Res);
 
 		if (i == 0) {
-			if (SMSDPgSQL_Query(Config, "SELECT currval('outbox_id_seq')", &Res) != ERR_NONE) {
+			if (SMSDPgSQL_Query(Config, &Res, "%s", "SELECT currval('outbox_id_seq')") != ERR_NONE) {
 				SMSD_Log(0, Config, "Error getting current ID (%s)", __FUNCTION__);
 				return ERR_UNKNOWN;
 			}
@@ -924,13 +965,7 @@ static GSM_Error SMSDPgSQL_AddSentSMSInfo(GSM_MultiSMSMessage * sms,
 
 		case SMS_Coding_Default_No_Compression:
 			EncodeUTF8(buffer2, sms->SMS[Part - 1].Text);
-#ifdef HAVE_PQESCAPESTRINGCONN
-			PQescapeStringConn(Config->DBConnPgSQL, buffer5,
-					   buffer2, strlen(buffer2),
-					   NULL);
-#else
-			PQescapeString(buffer5, buffer2, strlen(buffer2));
-#endif
+			SMSDPgSQL_Escape(Config, buffer5, buffer2);
 			memcpy(buffer + strlen(buffer), buffer5,
 			       strlen(buffer5) + 1);
 			break;
@@ -949,14 +984,13 @@ static GSM_Error SMSDPgSQL_AddSentSMSInfo(GSM_MultiSMSMessage * sms,
 		sprintf(buffer + strlen(buffer), "-1')");
 	}
 
-	if (SMSDPgSQL_Query(Config, buffer, &Res) != ERR_NONE) {
+	if (SMSDPgSQL_Query(Config, &Res, "%s", buffer) != ERR_NONE) {
 		SMSD_Log(0, Config, "Error writing to database (%s)", __FUNCTION__);
 		return ERR_UNKNOWN;
 	}
 	PQclear(Res);
 
-	sprintf(buffer, "UPDATE phones SET Sent= Sent + 1 WHERE IMEI = '%s'", Config->Status->IMEI);
-	if (SMSDPgSQL_Query(Config, buffer, &Res) != ERR_NONE) {
+	if (SMSDPgSQL_Query(Config, &Res, "UPDATE phones SET Sent= Sent + 1 WHERE IMEI = '%s'", Config->Status->IMEI) != ERR_NONE) {
 		SMSD_Log(0, Config, "Error updating number of sent messages (%s)", __FUNCTION__);
 		return ERR_UNKNOWN;
 	}
@@ -969,14 +1003,10 @@ static GSM_Error SMSDPgSQL_RefreshPhoneStatus(GSM_SMSDConfig * Config)
 {
 	PGresult *Res;
 
-	unsigned char buffer[500];
-
-	sprintf(buffer,
-		"UPDATE phones SET TimeOut= now() + INTERVAL '10 seconds', Battery = %d, Signal = %d WHERE IMEI = '%s'",
-		Config->Status->Charge.BatteryPercent, Config->Status->Network.SignalPercent, Config->Status->IMEI);
-	if (SMSDPgSQL_Query(Config, buffer, &Res) != ERR_NONE) {
-		SMSD_Log(0, Config, "Error writing to database (%s)", __FUNCTION__);
-		return ERR_UNKNOWN;
+	if (SMSDPgSQL_Query(Config, &Res, "UPDATE phones SET TimeOut= now() + INTERVAL '10 seconds', Battery = %d, Signal = %d WHERE IMEI = '%s'",
+		Config->Status->Charge.BatteryPercent, Config->Status->Network.SignalPercent, Config->Status->IMEI) != ERR_NONE) {
+			SMSD_Log(0, Config, "Error writing to database (%s)", __FUNCTION__);
+			return ERR_UNKNOWN;
 	}
 	PQclear(Res);
 
