@@ -26,6 +26,7 @@ ChangeLog
       reduces Gammu memory usage by 800 MiB.
 [-] * Added testcases for AT+CNMI replies.
 [-] * Fixed range parsing in AT engine.
+[+] * Added reconnect support in PostgreSQL driver in SMSD.
     
 20090709 - 1.25.0
 
